--- a/ui/table_view.ui
+++ b/ui/table_view.ui
@@ -14,7 +14,7 @@
    <string>Form</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color:rgb(255, 255, 255);</string>
+   <string notr="true">background-color:rgb(231, 231, 221)</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <property name="leftMargin">
@@ -30,38 +30,7 @@
     <number>10</number>
    </property>
    <item row="0" column="0">
-    <widget class="QTableView" name="tableView">
-     <property name="styleSheet">
-      <string notr="true">qtableview {
-    background-color: #ededed; /* Table background */
-    color: black; /* Table font color */
-    font-family: &quot;Inter&quot;;
-    font-size: 10pt; /* Table font size */
-}
-
-qtableview::item {
-    padding: 5px; /* Padding for table items */
-}
-
-qtableview::item:selected {
-    background-color: #cfcfcf; /* Selected item background color */
-}
-
-qtableview QHeaderView {
-    background-color: #7409ad; /* Header background */
-    color: white; /* Header font color */
-    font-family: &quot;Inter&quot;;
-    font-size: 10pt; /* Header font size */
-    font-weight: bold; /* Header font weight */
-}</string>
-     </property>
-     <property name="sortingEnabled">
-      <bool>false</bool>
-     </property>
-     <attribute name="horizontalHeaderVisible">
-      <bool>true</bool>
-     </attribute>
-    </widget>
+    <widget class="QTableWidget" name="tableWidget"/>
    </item>
   </layout>
  </widget>
